--- a/NCR_check/1.Calculator/1.Calculator/1.Calculator.vcxproj.filters
+++ b/NCR_check/1.Calculator/1.Calculator/1.Calculator.vcxproj.filters
@@ -18,5 +18,17 @@
     <ClCompile Include="Calci.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="add.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="sub.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="mul.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="div.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
